--- a/02_handling_outliers.ipynb
+++ b/02_handling_outliers.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "f0b56bd7",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "88be9be8",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>customerID</th>\n",
        "      <th>gender</th>\n",
        "      <th>SeniorCitizen</th>\n",
        "      <th>Partner</th>\n",
@@ -67,7 +66,7 @@
        "      <th>MultipleLines</th>\n",
        "      <th>InternetService</th>\n",
        "      <th>OnlineSecurity</th>\n",
-       "      <th>...</th>\n",
+       "      <th>OnlineBackup</th>\n",
        "      <th>DeviceProtection</th>\n",
        "      <th>TechSupport</th>\n",
        "      <th>StreamingTV</th>\n",
@@ -83,7 +82,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>7590-VHVEG</td>\n",
        "      <td>Female</td>\n",
        "      <td>0</td>\n",
        "      <td>Yes</td>\n",
@@ -93,7 +91,7 @@
        "      <td>No phone service</td>\n",
        "      <td>DSL</td>\n",
        "      <td>No</td>\n",
-       "      <td>...</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
@@ -107,7 +105,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5575-GNVDE</td>\n",
        "      <td>Male</td>\n",
        "      <td>0</td>\n",
        "      <td>No</td>\n",
@@ -117,7 +114,7 @@
        "      <td>No</td>\n",
        "      <td>DSL</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>...</td>\n",
+       "      <td>No</td>\n",
        "      <td>Yes</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
@@ -131,7 +128,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3668-QPYBK</td>\n",
        "      <td>Male</td>\n",
        "      <td>0</td>\n",
        "      <td>No</td>\n",
@@ -141,7 +137,7 @@
        "      <td>No</td>\n",
        "      <td>DSL</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>...</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
@@ -155,7 +151,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>7795-CFOCW</td>\n",
        "      <td>Male</td>\n",
        "      <td>0</td>\n",
        "      <td>No</td>\n",
@@ -165,7 +160,7 @@
        "      <td>No phone service</td>\n",
        "      <td>DSL</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>...</td>\n",
+       "      <td>No</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Yes</td>\n",
        "      <td>No</td>\n",
@@ -179,7 +174,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>9237-HQITU</td>\n",
        "      <td>Female</td>\n",
        "      <td>0</td>\n",
        "      <td>No</td>\n",
@@ -189,7 +183,7 @@
        "      <td>No</td>\n",
        "      <td>Fiber optic</td>\n",
        "      <td>No</td>\n",
-       "      <td>...</td>\n",
+       "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
@@ -203,42 +197,46 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   customerID  gender  SeniorCitizen Partner Dependents  tenure PhoneService  \\\n",
-       "0  7590-VHVEG  Female              0     Yes         No       1           No   \n",
-       "1  5575-GNVDE    Male              0      No         No      34          Yes   \n",
-       "2  3668-QPYBK    Male              0      No         No       2          Yes   \n",
-       "3  7795-CFOCW    Male              0      No         No      45           No   \n",
-       "4  9237-HQITU  Female              0      No         No       2          Yes   \n",
+       "   gender  SeniorCitizen Partner Dependents  tenure PhoneService  \\\n",
+       "0  Female              0     Yes         No       1           No   \n",
+       "1    Male              0      No         No      34          Yes   \n",
+       "2    Male              0      No         No       2          Yes   \n",
+       "3    Male              0      No         No      45           No   \n",
+       "4  Female              0      No         No       2          Yes   \n",
        "\n",
-       "      MultipleLines InternetService OnlineSecurity  ... DeviceProtection  \\\n",
-       "0  No phone service             DSL             No  ...               No   \n",
-       "1                No             DSL            Yes  ...              Yes   \n",
-       "2                No             DSL            Yes  ...               No   \n",
-       "3  No phone service             DSL            Yes  ...              Yes   \n",
-       "4                No     Fiber optic             No  ...               No   \n",
+       "      MultipleLines InternetService OnlineSecurity OnlineBackup  \\\n",
+       "0  No phone service             DSL             No          Yes   \n",
+       "1                No             DSL            Yes           No   \n",
+       "2                No             DSL            Yes          Yes   \n",
+       "3  No phone service             DSL            Yes           No   \n",
+       "4                No     Fiber optic             No           No   \n",
        "\n",
-       "  TechSupport StreamingTV StreamingMovies        Contract PaperlessBilling  \\\n",
-       "0          No          No              No  Month-to-month              Yes   \n",
-       "1          No          No              No        One year               No   \n",
-       "2          No          No              No  Month-to-month              Yes   \n",
-       "3         Yes          No              No        One year               No   \n",
-       "4          No          No              No  Month-to-month              Yes   \n",
+       "  DeviceProtection TechSupport StreamingTV StreamingMovies        Contract  \\\n",
+       "0               No          No          No              No  Month-to-month   \n",
+       "1              Yes          No          No              No        One year   \n",
+       "2               No          No          No              No  Month-to-month   \n",
+       "3              Yes         Yes          No              No        One year   \n",
+       "4               No          No          No              No  Month-to-month   \n",
        "\n",
-       "               PaymentMethod MonthlyCharges  TotalCharges  Churn  \n",
-       "0           Electronic check          29.85         29.85     No  \n",
-       "1               Mailed check          56.95       1889.50     No  \n",
-       "2               Mailed check          53.85        108.15    Yes  \n",
-       "3  Bank transfer (automatic)          42.30       1840.75     No  \n",
-       "4           Electronic check          70.70        151.65    Yes  \n",
+       "  PaperlessBilling              PaymentMethod  MonthlyCharges  TotalCharges  \\\n",
+       "0              Yes           Electronic check           29.85         29.85   \n",
+       "1               No               Mailed check           56.95       1889.50   \n",
+       "2              Yes               Mailed check           53.85        108.15   \n",
+       "3               No  Bank transfer (automatic)           42.30       1840.75   \n",
+       "4              Yes           Electronic check           70.70        151.65   \n",
        "\n",
-       "[5 rows x 21 columns]"
+       "  Churn  \n",
+       "0    No  \n",
+       "1    No  \n",
+       "2   Yes  \n",
+       "3    No  \n",
+       "4   Yes  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "beec0ae8",
    "metadata": {},
    "outputs": [],
@@ -282,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "a1519834",
    "metadata": {},
    "outputs": [
@@ -319,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "b433caba",
    "metadata": {},
    "outputs": [
@@ -420,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "996500ba",
    "metadata": {},
    "outputs": [
@@ -451,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "1e02c42a",
    "metadata": {},
    "outputs": [],
@@ -470,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "10a430c5",
    "metadata": {},
    "outputs": [
