--- a/03_feature_binning.ipynb
+++ b/03_feature_binning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "69f0637e",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "039ce3c7",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>customerID</th>\n",
        "      <th>gender</th>\n",
        "      <th>SeniorCitizen</th>\n",
        "      <th>Partner</th>\n",
@@ -64,7 +63,7 @@
        "      <th>MultipleLines</th>\n",
        "      <th>InternetService</th>\n",
        "      <th>OnlineSecurity</th>\n",
-       "      <th>...</th>\n",
+       "      <th>OnlineBackup</th>\n",
        "      <th>DeviceProtection</th>\n",
        "      <th>TechSupport</th>\n",
        "      <th>StreamingTV</th>\n",
@@ -80,7 +79,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>7590-VHVEG</td>\n",
        "      <td>Female</td>\n",
        "      <td>0</td>\n",
        "      <td>Yes</td>\n",
@@ -90,7 +88,7 @@
        "      <td>No phone service</td>\n",
        "      <td>DSL</td>\n",
        "      <td>No</td>\n",
-       "      <td>...</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
@@ -104,7 +102,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5575-GNVDE</td>\n",
        "      <td>Male</td>\n",
        "      <td>0</td>\n",
        "      <td>No</td>\n",
@@ -114,7 +111,7 @@
        "      <td>No</td>\n",
        "      <td>DSL</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>...</td>\n",
+       "      <td>No</td>\n",
        "      <td>Yes</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
@@ -128,7 +125,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3668-QPYBK</td>\n",
        "      <td>Male</td>\n",
        "      <td>0</td>\n",
        "      <td>No</td>\n",
@@ -138,7 +134,7 @@
        "      <td>No</td>\n",
        "      <td>DSL</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>...</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
@@ -152,7 +148,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>7795-CFOCW</td>\n",
        "      <td>Male</td>\n",
        "      <td>0</td>\n",
        "      <td>No</td>\n",
@@ -162,7 +157,7 @@
        "      <td>No phone service</td>\n",
        "      <td>DSL</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>...</td>\n",
+       "      <td>No</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Yes</td>\n",
        "      <td>No</td>\n",
@@ -176,7 +171,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>9237-HQITU</td>\n",
        "      <td>Female</td>\n",
        "      <td>0</td>\n",
        "      <td>No</td>\n",
@@ -186,7 +180,7 @@
        "      <td>No</td>\n",
        "      <td>Fiber optic</td>\n",
        "      <td>No</td>\n",
-       "      <td>...</td>\n",
+       "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
@@ -200,42 +194,46 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   customerID  gender  SeniorCitizen Partner Dependents  tenure PhoneService  \\\n",
-       "0  7590-VHVEG  Female              0     Yes         No       1           No   \n",
-       "1  5575-GNVDE    Male              0      No         No      34          Yes   \n",
-       "2  3668-QPYBK    Male              0      No         No       2          Yes   \n",
-       "3  7795-CFOCW    Male              0      No         No      45           No   \n",
-       "4  9237-HQITU  Female              0      No         No       2          Yes   \n",
+       "   gender  SeniorCitizen Partner Dependents  tenure PhoneService  \\\n",
+       "0  Female              0     Yes         No       1           No   \n",
+       "1    Male              0      No         No      34          Yes   \n",
+       "2    Male              0      No         No       2          Yes   \n",
+       "3    Male              0      No         No      45           No   \n",
+       "4  Female              0      No         No       2          Yes   \n",
        "\n",
-       "      MultipleLines InternetService OnlineSecurity  ... DeviceProtection  \\\n",
-       "0  No phone service             DSL             No  ...               No   \n",
-       "1                No             DSL            Yes  ...              Yes   \n",
-       "2                No             DSL            Yes  ...               No   \n",
-       "3  No phone service             DSL            Yes  ...              Yes   \n",
-       "4                No     Fiber optic             No  ...               No   \n",
+       "      MultipleLines InternetService OnlineSecurity OnlineBackup  \\\n",
+       "0  No phone service             DSL             No          Yes   \n",
+       "1                No             DSL            Yes           No   \n",
+       "2                No             DSL            Yes          Yes   \n",
+       "3  No phone service             DSL            Yes           No   \n",
+       "4                No     Fiber optic             No           No   \n",
        "\n",
-       "  TechSupport StreamingTV StreamingMovies        Contract PaperlessBilling  \\\n",
-       "0          No          No              No  Month-to-month              Yes   \n",
-       "1          No          No              No        One year               No   \n",
-       "2          No          No              No  Month-to-month              Yes   \n",
-       "3         Yes          No              No        One year               No   \n",
-       "4          No          No              No  Month-to-month              Yes   \n",
+       "  DeviceProtection TechSupport StreamingTV StreamingMovies        Contract  \\\n",
+       "0               No          No          No              No  Month-to-month   \n",
+       "1              Yes          No          No              No        One year   \n",
+       "2               No          No          No              No  Month-to-month   \n",
+       "3              Yes         Yes          No              No        One year   \n",
+       "4               No          No          No              No  Month-to-month   \n",
        "\n",
-       "               PaymentMethod MonthlyCharges  TotalCharges  Churn  \n",
-       "0           Electronic check          29.85         29.85     No  \n",
-       "1               Mailed check          56.95       1889.50     No  \n",
-       "2               Mailed check          53.85        108.15    Yes  \n",
-       "3  Bank transfer (automatic)          42.30       1840.75     No  \n",
-       "4           Electronic check          70.70        151.65    Yes  \n",
+       "  PaperlessBilling              PaymentMethod  MonthlyCharges  TotalCharges  \\\n",
+       "0              Yes           Electronic check           29.85         29.85   \n",
+       "1               No               Mailed check           56.95       1889.50   \n",
+       "2              Yes               Mailed check           53.85        108.15   \n",
+       "3               No  Bank transfer (automatic)           42.30       1840.75   \n",
+       "4              Yes           Electronic check           70.70        151.65   \n",
        "\n",
-       "[5 rows x 21 columns]"
+       "  Churn  \n",
+       "0    No  \n",
+       "1    No  \n",
+       "2   Yes  \n",
+       "3    No  \n",
+       "4   Yes  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "e44028e8",
    "metadata": {},
    "outputs": [],
@@ -271,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "4143b04a",
    "metadata": {},
    "outputs": [],
@@ -282,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "6d1a1c33",
    "metadata": {},
    "outputs": [
@@ -307,7 +305,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>customerID</th>\n",
        "      <th>gender</th>\n",
        "      <th>SeniorCitizen</th>\n",
        "      <th>Partner</th>\n",
@@ -317,7 +314,7 @@
        "      <th>InternetService</th>\n",
        "      <th>OnlineSecurity</th>\n",
        "      <th>OnlineBackup</th>\n",
-       "      <th>...</th>\n",
+       "      <th>DeviceProtection</th>\n",
        "      <th>TechSupport</th>\n",
        "      <th>StreamingTV</th>\n",
        "      <th>StreamingMovies</th>\n",
@@ -333,7 +330,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>7590-VHVEG</td>\n",
        "      <td>Female</td>\n",
        "      <td>0</td>\n",
        "      <td>Yes</td>\n",
@@ -343,7 +339,7 @@
        "      <td>DSL</td>\n",
        "      <td>No</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>...</td>\n",
+       "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
@@ -357,7 +353,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5575-GNVDE</td>\n",
        "      <td>Male</td>\n",
        "      <td>0</td>\n",
        "      <td>No</td>\n",
@@ -367,7 +362,7 @@
        "      <td>DSL</td>\n",
        "      <td>Yes</td>\n",
        "      <td>No</td>\n",
-       "      <td>...</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
@@ -381,7 +376,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3668-QPYBK</td>\n",
        "      <td>Male</td>\n",
        "      <td>0</td>\n",
        "      <td>No</td>\n",
@@ -391,7 +385,7 @@
        "      <td>DSL</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>...</td>\n",
+       "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
@@ -405,7 +399,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>7795-CFOCW</td>\n",
        "      <td>Male</td>\n",
        "      <td>0</td>\n",
        "      <td>No</td>\n",
@@ -415,7 +408,7 @@
        "      <td>DSL</td>\n",
        "      <td>Yes</td>\n",
        "      <td>No</td>\n",
-       "      <td>...</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>Yes</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
@@ -429,7 +422,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>9237-HQITU</td>\n",
        "      <td>Female</td>\n",
        "      <td>0</td>\n",
        "      <td>No</td>\n",
@@ -439,7 +431,7 @@
        "      <td>Fiber optic</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
-       "      <td>...</td>\n",
+       "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
@@ -453,42 +445,39 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   customerID  gender  SeniorCitizen Partner Dependents PhoneService  \\\n",
-       "0  7590-VHVEG  Female              0     Yes         No           No   \n",
-       "1  5575-GNVDE    Male              0      No         No          Yes   \n",
-       "2  3668-QPYBK    Male              0      No         No          Yes   \n",
-       "3  7795-CFOCW    Male              0      No         No           No   \n",
-       "4  9237-HQITU  Female              0      No         No          Yes   \n",
+       "   gender  SeniorCitizen Partner Dependents PhoneService     MultipleLines  \\\n",
+       "0  Female              0     Yes         No           No  No phone service   \n",
+       "1    Male              0      No         No          Yes                No   \n",
+       "2    Male              0      No         No          Yes                No   \n",
+       "3    Male              0      No         No           No  No phone service   \n",
+       "4  Female              0      No         No          Yes                No   \n",
        "\n",
-       "      MultipleLines InternetService OnlineSecurity OnlineBackup  ...  \\\n",
-       "0  No phone service             DSL             No          Yes  ...   \n",
-       "1                No             DSL            Yes           No  ...   \n",
-       "2                No             DSL            Yes          Yes  ...   \n",
-       "3  No phone service             DSL            Yes           No  ...   \n",
-       "4                No     Fiber optic             No           No  ...   \n",
+       "  InternetService OnlineSecurity OnlineBackup DeviceProtection TechSupport  \\\n",
+       "0             DSL             No          Yes               No          No   \n",
+       "1             DSL            Yes           No              Yes          No   \n",
+       "2             DSL            Yes          Yes               No          No   \n",
+       "3             DSL            Yes           No              Yes         Yes   \n",
+       "4     Fiber optic             No           No               No          No   \n",
        "\n",
-       "  TechSupport StreamingTV StreamingMovies        Contract PaperlessBilling  \\\n",
-       "0          No          No              No  Month-to-month              Yes   \n",
-       "1          No          No              No        One year               No   \n",
-       "2          No          No              No  Month-to-month              Yes   \n",
-       "3         Yes          No              No        One year               No   \n",
-       "4          No          No              No  Month-to-month              Yes   \n",
+       "  StreamingTV StreamingMovies        Contract PaperlessBilling  \\\n",
+       "0          No              No  Month-to-month              Yes   \n",
+       "1          No              No        One year               No   \n",
+       "2          No              No  Month-to-month              Yes   \n",
+       "3          No              No        One year               No   \n",
+       "4          No              No  Month-to-month              Yes   \n",
        "\n",
-       "               PaymentMethod MonthlyCharges  TotalCharges  Churn tenure_bins  \n",
-       "0           Electronic check          29.85         29.85     No       Newer  \n",
-       "1               Mailed check          56.95       1889.50     No      Medium  \n",
-       "2               Mailed check          53.85        108.15    Yes       Newer  \n",
-       "3  Bank transfer (automatic)          42.30       1840.75     No      Medium  \n",
-       "4           Electronic check          70.70        151.65    Yes       Newer  \n",
-       "\n",
-       "[5 rows x 21 columns]"
+       "               PaymentMethod  MonthlyCharges  TotalCharges Churn tenure_bins  \n",
+       "0           Electronic check           29.85         29.85    No       Newer  \n",
+       "1               Mailed check           56.95       1889.50    No      Medium  \n",
+       "2               Mailed check           53.85        108.15   Yes       Newer  \n",
+       "3  Bank transfer (automatic)           42.30       1840.75    No      Medium  \n",
+       "4           Electronic check           70.70        151.65   Yes       Newer  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "f6114880",
    "metadata": {},
    "outputs": [],
