overfitting issue fixed

--- a/Notebook/06_model_training.ipynb
+++ b/Notebook/06_model_training.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "be4c5ed5",
    "metadata": {},
    "outputs": [],
@@ -30,6 +30,9 @@
     "                                    GridSearchCV\n",
     "                                    )\n",
     "from sklearn.metrics import confusion_matrix\n",
+    "from imblearn.pipeline import Pipeline as ImbPipeline\n",
+    "from imblearn.over_sampling import SMOTE\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, classification_report\n",
     "warnings.filterwarnings('ignore')"
    ]
   },
@@ -43,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "b5c90b09",
    "metadata": {},
    "outputs": [],
@@ -64,23 +67,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "6c8c2d2e",
    "metadata": {},
    "outputs": [],
    "source": [
     "lr_param_grid = {\n",
-    "                'max_iter' : [1000, 5000, 10000]\n",
-    "                }\n",
+    "    'model__max_iter' : [1000, 5000],\n",
+    "    'model__C': [0.1, 1.0, 10.0]\n",
+    "}\n",
+    "\n",
     "dt_param_grid = {\n",
-    "                'max_depth' : [8, 12, 16, 20],\n",
-    "                'criterion' : [\"gini\", \"entropy\", \"log_loss\"]\n",
-    "                }\n",
+    "    'model__max_depth' : [5, 8, 10],\n",
+    "    'model__min_samples_leaf': [2, 5, 10],\n",
+    "    'model__criterion' : [\"gini\", \"entropy\"]\n",
+    "}\n",
+    "\n",
     "rf_param_grid = {\n",
-    "                'n_estimators' : [100],\n",
-    "                'max_depth' : [8, 12],\n",
-    "                'criterion' : [\"gini\", \"entropy\", \"log_loss\"]\n",
-    "                }\n",
+    "    'model__n_estimators' : [100, 200],\n",
+    "    'model__max_depth' : [8, 10, 12],\n",
+    "    'model__min_samples_leaf': [2, 5, 10],\n",
+    "    'model__class_weight': ['balanced', 'balanced_subsample', None]\n",
+    "}\n",
     "\n",
     "param_grids = {\n",
     "    'Logistic Regression': lr_param_grid,\n",
@@ -99,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "ab189fd1",
    "metadata": {},
    "outputs": [],
@@ -121,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "cd2a931b",
    "metadata": {},
    "outputs": [],
@@ -143,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "e264956b",
    "metadata": {},
    "outputs": [
@@ -154,24 +162,65 @@
       "\n",
       "--- Tuning Logistic Regression ---\n",
       "Fitting gridSearchCV for Logistic Regression\n",
-      "Fitting 6 folds for each of 3 candidates, totalling 18 fits\n",
+      "Fitting 6 folds for each of 6 candidates, totalling 36 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  File \"c:\\Users\\www\\anaconda3\\Lib\\site-packages\\joblib\\externals\\loky\\backend\\context.py\", line 257, in _count_physical_cores\n",
+      "    cpu_info = subprocess.run(\n",
+      "        \"wmic CPU Get NumberOfCores /Format:csv\".split(),\n",
+      "        capture_output=True,\n",
+      "        text=True,\n",
+      "    )\n",
+      "  File \"c:\\Users\\www\\anaconda3\\Lib\\subprocess.py\", line 554, in run\n",
+      "    with Popen(*popenargs, **kwargs) as process:\n",
+      "         ~~~~~^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\www\\anaconda3\\Lib\\subprocess.py\", line 1039, in __init__\n",
+      "    self._execute_child(args, executable, preexec_fn, close_fds,\n",
+      "    ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "                        pass_fds, cwd, env,\n",
+      "                        ^^^^^^^^^^^^^^^^^^^\n",
+      "    ...<5 lines>...\n",
+      "                        gid, gids, uid, umask,\n",
+      "                        ^^^^^^^^^^^^^^^^^^^^^^\n",
+      "                        start_new_session, process_group)\n",
+      "                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\www\\anaconda3\\Lib\\subprocess.py\", line 1554, in _execute_child\n",
+      "    hp, ht, pid, tid = _winapi.CreateProcess(executable, args,\n",
+      "                       ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^\n",
+      "                             # no special security\n",
+      "                             ^^^^^^^^^^^^^^^^^^^^^\n",
+      "    ...<4 lines>...\n",
+      "                             cwd,\n",
+      "                             ^^^^\n",
+      "                             startupinfo)\n",
+      "                             ^^^^^^^^^^^^\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Logistic Regression gridSearchCV completed ...\n",
-      "Best parameters: {'max_iter': 1000}\n",
-      "Best CV score: 0.7765173736763735\n",
+      "Best parameters: {'model__C': 1.0, 'model__max_iter': 1000}\n",
+      "Best CV score: 0.6296484628846933\n",
       "\n",
       "--- Tuning Decision Tree ---\n",
       "Fitting gridSearchCV for Decision Tree\n",
-      "Fitting 6 folds for each of 12 candidates, totalling 72 fits\n",
+      "Fitting 6 folds for each of 18 candidates, totalling 108 fits\n",
       "Decision Tree gridSearchCV completed ...\n",
-      "Best parameters: {'criterion': 'entropy', 'max_depth': 12}\n",
-      "Best CV score: 0.8118783677341771\n",
+      "Best parameters: {'model__criterion': 'gini', 'model__max_depth': 8, 'model__min_samples_leaf': 10}\n",
+      "Best CV score: 0.6111379034131776\n",
       "\n",
       "--- Tuning Random Forest ---\n",
       "Fitting gridSearchCV for Random Forest\n",
-      "Fitting 6 folds for each of 6 candidates, totalling 36 fits\n",
+      "Fitting 6 folds for each of 54 candidates, totalling 324 fits\n",
       "Random Forest gridSearchCV completed ...\n",
-      "Best parameters: {'criterion': 'gini', 'max_depth': 12, 'n_estimators': 100}\n",
-      "Best CV score: 0.8543221287446746\n"
+      "Best parameters: {'model__class_weight': None, 'model__max_depth': 8, 'model__min_samples_leaf': 5, 'model__n_estimators': 100}\n",
+      "Best CV score: 0.6413950365891932\n"
      ]
     }
    ],
@@ -181,10 +230,16 @@
     "\n",
     "    print(f\"\\n--- Tuning {model_name} ---\")\n",
     "\n",
+    "    # Create Pipeline: SMOTE -> Model\n",
+    "    pipeline = ImbPipeline([\n",
+    "        ('smote', SMOTE(random_state=42)),\n",
+    "        ('model', model)\n",
+    "    ])\n",
+    "\n",
     "    param_grid = param_grids[model_name]\n",
     "\n",
     "    grid_search = GridSearchCV(\n",
-    "                                estimator=model,\n",
+    "                                estimator=pipeline,\n",
     "                                param_grid=param_grid,\n",
     "                                cv=cv, scoring='f1',\n",
     "                                verbose=1, return_train_score=False\n",
@@ -203,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "033623a2",
    "metadata": {},
    "outputs": [
@@ -211,22 +266,30 @@
      "data": {
       "text/plain": [
        "{'Logistic Regression': GridSearchCV(cv=StratifiedKFold(n_splits=6, random_state=42, shuffle=True),\n",
-       "              estimator=LogisticRegression(),\n",
-       "              param_grid={'max_iter': [1000, 5000, 10000]}, scoring='f1',\n",
-       "              verbose=1),\n",
+       "              estimator=Pipeline(steps=[('smote', SMOTE(random_state=42)),\n",
+       "                                        ('model', LogisticRegression())]),\n",
+       "              param_grid={'model__C': [0.1, 1.0, 10.0],\n",
+       "                          'model__max_iter': [1000, 5000]},\n",
+       "              scoring='f1', verbose=1),\n",
        " 'Decision Tree': GridSearchCV(cv=StratifiedKFold(n_splits=6, random_state=42, shuffle=True),\n",
-       "              estimator=DecisionTreeClassifier(),\n",
-       "              param_grid={'criterion': ['gini', 'entropy', 'log_loss'],\n",
-       "                          'max_depth': [8, 12, 16, 20]},\n",
+       "              estimator=Pipeline(steps=[('smote', SMOTE(random_state=42)),\n",
+       "                                        ('model', DecisionTreeClassifier())]),\n",
+       "              param_grid={'model__criterion': ['gini', 'entropy'],\n",
+       "                          'model__max_depth': [5, 8, 10],\n",
+       "                          'model__min_samples_leaf': [2, 5, 10]},\n",
        "              scoring='f1', verbose=1),\n",
        " 'Random Forest': GridSearchCV(cv=StratifiedKFold(n_splits=6, random_state=42, shuffle=True),\n",
-       "              estimator=RandomForestClassifier(),\n",
-       "              param_grid={'criterion': ['gini', 'entropy', 'log_loss'],\n",
-       "                          'max_depth': [8, 12], 'n_estimators': [100]},\n",
+       "              estimator=Pipeline(steps=[('smote', SMOTE(random_state=42)),\n",
+       "                                        ('model', RandomForestClassifier())]),\n",
+       "              param_grid={'model__class_weight': ['balanced',\n",
+       "                                                  'balanced_subsample', None],\n",
+       "                          'model__max_depth': [8, 10, 12],\n",
+       "                          'model__min_samples_leaf': [2, 5, 10],\n",
+       "                          'model__n_estimators': [100, 200]},\n",
        "              scoring='f1', verbose=1)}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,8 +300,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "b446eace",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Logistic Regression Test Set Metrics ---\n",
+      "Accuracy:  0.7356\n",
+      "Precision: 0.5017\n",
+      "Recall:    0.7727\n",
+      "F1-score:  0.6084\n",
+      "\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.90      0.72      0.80      1033\n",
+      "           1       0.50      0.77      0.61       374\n",
+      "\n",
+      "    accuracy                           0.74      1407\n",
+      "   macro avg       0.70      0.75      0.70      1407\n",
+      "weighted avg       0.79      0.74      0.75      1407\n",
+      "\n",
+      "\n",
+      "--- Decision Tree Test Set Metrics ---\n",
+      "Accuracy:  0.7342\n",
+      "Precision: 0.5000\n",
+      "Recall:    0.6845\n",
+      "F1-score:  0.5779\n",
+      "\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.87      0.75      0.81      1033\n",
+      "           1       0.50      0.68      0.58       374\n",
+      "\n",
+      "    accuracy                           0.73      1407\n",
+      "   macro avg       0.68      0.72      0.69      1407\n",
+      "weighted avg       0.77      0.73      0.75      1407\n",
+      "\n",
+      "\n",
+      "--- Random Forest Test Set Metrics ---\n",
+      "Accuracy:  0.7520\n",
+      "Precision: 0.5243\n",
+      "Recall:    0.7219\n",
+      "F1-score:  0.6074\n",
+      "\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.88      0.76      0.82      1033\n",
+      "           1       0.52      0.72      0.61       374\n",
+      "\n",
+      "    accuracy                           0.75      1407\n",
+      "   macro avg       0.70      0.74      0.71      1407\n",
+      "weighted avg       0.79      0.75      0.76      1407\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assume X_test, Y_test are your test features and labels\n",
+    "for model_name, grid in grid_search_results.items():\n",
+    "    # Get the best estimator from GridSearchCV\n",
+    "    best_model = grid.best_estimator_\n",
+    "    \n",
+    "    # Make predictions on the test set\n",
+    "    y_pred = best_model.predict(X_test)\n",
+    "    \n",
+    "    # Compute metrics\n",
+    "    accuracy = accuracy_score(Y_test, y_pred)\n",
+    "    precision = precision_score(Y_test, y_pred)\n",
+    "    recall = recall_score(Y_test, y_pred)\n",
+    "    f1 = f1_score(Y_test, y_pred)\n",
+    "    \n",
+    "    print(f\"\\n--- {model_name} Test Set Metrics ---\")\n",
+    "    print(f\"Accuracy:  {accuracy:.4f}\")\n",
+    "    print(f\"Precision: {precision:.4f}\")\n",
+    "    print(f\"Recall:    {recall:.4f}\")\n",
+    "    print(f\"F1-score:  {f1:.4f}\")\n",
+    "    print(\"\\nClassification Report:\")\n",
+    "    print(classification_report(Y_test, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3c13148",
    "metadata": {},
    "outputs": [],
    "source": []
