--- a/Notebook/04_normalizing_and_scalling.ipynb
+++ b/Notebook/04_normalizing_and_scalling.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "fdf7a93d",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "ae2f9f62",
    "metadata": {},
    "outputs": [
@@ -233,7 +233,7 @@
        "4           Electronic check           70.70        151.65   Yes       Newer  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "a978581e",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "f4de0d77",
    "metadata": {},
    "outputs": [],
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "13748ecd",
    "metadata": {},
    "outputs": [
@@ -693,7 +693,7 @@
        "[7032 rows x 46 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "861663ff",
    "metadata": {},
    "outputs": [],
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "d2257f7a",
    "metadata": {},
    "outputs": [],
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "4e7cc041",
    "metadata": {},
    "outputs": [],
@@ -812,10 +812,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "6c734d3b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\www\\anaconda3\\Lib\\site-packages\\joblib\\externals\\loky\\backend\\context.py:136: UserWarning: Could not find the number of physical cores for the following reason:\n",
+      "[WinError 2] The system cannot find the file specified\n",
+      "Returning the number of logical cores instead. You can silence this warning by setting LOKY_MAX_CPU_COUNT to the number of cores you want to use.\n",
+      "  warnings.warn(\n",
+      "  File \"c:\\Users\\www\\anaconda3\\Lib\\site-packages\\joblib\\externals\\loky\\backend\\context.py\", line 257, in _count_physical_cores\n",
+      "    cpu_info = subprocess.run(\n",
+      "        \"wmic CPU Get NumberOfCores /Format:csv\".split(),\n",
+      "        capture_output=True,\n",
+      "        text=True,\n",
+      "    )\n",
+      "  File \"c:\\Users\\www\\anaconda3\\Lib\\subprocess.py\", line 554, in run\n",
+      "    with Popen(*popenargs, **kwargs) as process:\n",
+      "         ~~~~~^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\www\\anaconda3\\Lib\\subprocess.py\", line 1039, in __init__\n",
+      "    self._execute_child(args, executable, preexec_fn, close_fds,\n",
+      "    ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "                        pass_fds, cwd, env,\n",
+      "                        ^^^^^^^^^^^^^^^^^^^\n",
+      "    ...<5 lines>...\n",
+      "                        gid, gids, uid, umask,\n",
+      "                        ^^^^^^^^^^^^^^^^^^^^^^\n",
+      "                        start_new_session, process_group)\n",
+      "                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\www\\anaconda3\\Lib\\subprocess.py\", line 1554, in _execute_child\n",
+      "    hp, ht, pid, tid = _winapi.CreateProcess(executable, args,\n",
+      "                       ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^\n",
+      "                             # no special security\n",
+      "                             ^^^^^^^^^^^^^^^^^^^^^\n",
+      "    ...<4 lines>...\n",
+      "                             cwd,\n",
+      "                             ^^^^\n",
+      "                             startupinfo)\n",
+      "                             ^^^^^^^^^^^^\n"
+     ]
+    }
+   ],
    "source": [
     "smote = SMOTE(random_state=42)\n",
     "X_train_resampled, Y_train_resampled = smote.fit_resample(X_train, Y_train)"
@@ -823,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "26a81846",
    "metadata": {},
    "outputs": [
@@ -833,7 +873,7 @@
        "Text(0, 0.5, 'Count')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -875,13 +915,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "f8b0abea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.savez('artifacts/X_train.npz', X_train_resampled)\n",
-    "np.savez('artifacts/Y_train.npz', Y_train_resampled)\n",
+    "np.savez('artifacts/X_train.npz', X_train)\n",
+    "np.savez('artifacts/Y_train.npz', Y_train)\n",
     "np.savez('artifacts/X_test.npz', X_test)\n",
     "np.savez('artifacts/Y_test.npz', Y_test)"
    ]
